--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "3.2.x",
     "mongodb": "1.3.x",
-    "socket.io": "0.9.x"
+    "socket.io": "0.9.x",
+    "JSV": "4.0.x"
   }
 }
