--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,6 +6,7 @@
     "express": "3.2.x",
     "mongodb": "1.3.x",
     "socket.io": "0.9.x",
-    "JSV": "4.0.x"
+    "JSV": "4.0.x",
+    "redis": "0.8.x"
   }
 }
